--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "better-scroll": "^1.7.2",
     "element-ui": "^2.0.10",
     "install": "^0.10.2",
     "vue": "^2.5.2",
